--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </div>
                             <div class="card-body h">
                                 Locally Imagined is an art trading platform designed to help small artists and
-                                galleries navigate the violent industry of the art trade.
+                                galleries navigate the cut-throat industry of the art trade.
 
                             </div>
                         </div>
