bio synposis update

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
                     </div>
                     <div class="card-body">
                         <p class="lead">
-                            I am a software engineer who loves systems programming and web development. I currently work
-                            as a Software Engineer Consultant at OrganizeMyPeople, a software firm, where I create full
-                            stack web applications.
+                            I am a software engineer who loves systems programming and web development.
+                            In September, I joined Aurora for a 6 month contract as a Security Software Engineer. I work with the cloud security team.
+                            
+                            As of September, I am also wrapping up my work as a Software Engineer Consultant at OrganizeMyPeople, a software firm.
                         </p>
                         <p>
                             I have experience with socket programming, encryption, compression, encoding, machine
