--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             As of September, I am also wrapping up my work as a Software Engineer Consultant at OrganizeMyPeople, a software firm.
                         </p>
                         <p>
-                            I have experience with socket programming, encryption, compression, encoding, machine
+                            I have experience with socket programming, cryptography, compression, encoding, machine
                             learning, databases, and web development in a variety of frameworks, languages, and
                             technologies.
                         </p>
