update to wording.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="card-body">
                         <p class="lead">
                             I am a software engineer who loves systems programming and web development.
-                            In September, I joined Aurora for a 6 month contract as a Security Software Engineer. I work with the cloud security team.
+                            In September, I joined Aurora for a 6 month contract as a Security Software Engineer. I work with the vehicle security team. We design, create, and deploy software solutions that make autonomous vehicles and the cloud infrastructure behind them secure and efficient.
                             
                         </p>
                         <p>
