update ood info

--- a/index.html
+++ b/index.html
@@ -55,21 +55,19 @@
                     </div>
                     <div class="card-body">
                         <p class="lead">
-                            I am a software engineer who loves systems programming and web development.
-                            In September, I joined Aurora for a 6 month contract as a Security Software Engineer. I work with the vehicle security team. We design, create, and deploy software solutions that make autonomous vehicles and the cloud infrastructure behind them secure and efficient.
+                            I am a software engineer with focuses in security infrastructure and distributed systems.
+                            In September of 2023, I joined Aurora Innovation for a 6 month contract as a consulting software engineer. In March of 2024, the contract ended. I then officially joined Aurora as a direct employee, where I still work today.
+                            I am part of the Security Software Engineering team. Our team creates systems that adhere to and implement a zero trust architecture.
                             
                         </p>
                         <p>
-                            As of September, I am also wrapping up my work as a Software Engineer Consultant at OrganizeMyPeople, a software firm.
-                        </p>
-                        <p>
-                            I have experience with socket programming, cryptography, compression, encoding, machine
-                            learning, databases, and web development in a variety of frameworks, languages, and
-                            technologies.
+                            I have experience with lower level systems programming, higher level system design, and lots of topics in between. Much of my professional experience
+                            consists of designing and creating cloud security infrastructure -- and engineering these projects in a way that makes them accessible and "painless" as possible to all involved parties.
                         </p>
                         <p>
                             I love creating my own projects, and I have some of them on my Github. I also have some
                             featured on this website, <a href="#projects">listed below.</a>
+                            I also from time to time contribute to open source projects.
                         </p>
                     </div>
                 </div>
@@ -147,9 +145,6 @@
                         <div class="row">
                             <div class="col-12">
                                 <i>Email:</i> <a href="mailto:aaron@aa.codes">aaron@aa.codes</a>
-                            </div>
-                            <div class="col-12">
-                                <i>University Email:</i> <a href="mailto:azsteinb@ucsc.edu">azsteinb@ucsc.edu</a>
                             </div>
                         </div>
                     </div>
