--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="card-body">
                         <p class="lead">
                             I am a software engineer with focuses in security infrastructure and distributed systems.
-                            In September of 2023, I joined Aurora Innovation for a 6 month contract as a consulting software engineer. In March of 2024, the contract ended. I then officially joined Aurora as a direct employee, where I still work today.
+                            In September of 2023, I joined Aurora Innovation for a 6 month contract as a security software engineer. In March of 2024, the contract ended. I then officially joined Aurora as a direct employee, where I still work today.
                             I am part of the Security Software Engineering team. Our team creates systems that adhere to and implement a zero trust architecture.
                             
                         </p>
