--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                     </div>
                     <div class="card-body">
                         <p class="lead">
-                            I am a software engineer with focuses in security infrastructure and distributed systems.
-                            In September of 2023, I joined Aurora Innovation for a 6 month contract as a security software engineer. In March of 2024, the contract ended. I then officially joined Aurora as a direct employee, where I still work today.
+                            I am a software engineer with focuses in security infrastructure and distributed systems. I also work on embedded systems.
                             I am part of the Security Software Engineering team. Our team creates systems that adhere to and implement a zero trust architecture.
                             
                         </p>
                         <p>
                             I have experience with lower level systems programming, higher level system design, and lots of topics in between. Much of my professional experience
                             consists of designing and creating cloud security infrastructure -- and engineering these projects in a way that makes them accessible and "painless" as possible to all involved parties.
+                            Recently, I have transitioned from the world of cloud to the world of embedded systems.
                         </p>
                         <p>
                             I love creating my own projects, and I have some of them on my Github. I also have some
