--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                         </p>
                         <p>
                             I have experience with lower level systems programming, higher level system design, and lots of topics in between. Much of my professional experience
-                            consists of designing and creating cloud security infrastructure -- and engineering these projects in a way that makes them accessible and "painless" as possible to all involved parties.
-                            Recently, I have transitioned from the world of cloud to the world of embedded systems.
+                            consists of designing and creating cloud security infrastructure -- and engineering these projects in a way that makes them accessible and painless as possible to all involved parties.
+                            Recently, I have transitioned from the world of cloud to the world of embedded systems. My work in software security is not policy design, but implementation such that software and hardware adhere to policy and security requirements.
                         </p>
                         <p>
                             I love creating my own projects, and I have some of them on my Github. I also have some
