--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="card-body">
                         <p class="lead">
                             I am a software engineer with focuses in security infrastructure and distributed systems. I also work on embedded systems.
-                            I am part of the Security Software Engineering team. Our team creates systems that adhere to and implement a zero trust architecture.
+                            I am part of the Security Software Engineering team at Aurora Innovation. Our team creates systems that adhere to and implement a zero trust architecture.
                             
                         </p>
                         <p>
