--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <p>
                             I have experience with lower level systems programming, higher level system design, and lots of topics in between. Much of my professional experience
                             consists of designing and creating cloud security infrastructure -- and engineering these projects in a way that makes them accessible and painless as possible to all involved parties.
-                            Recently, I have transitioned from the world of cloud to the world of embedded systems. My work in software security is not policy design, but implementation such that software and hardware adhere to policy and security requirements.
+			    I also have experience in embedded systems with topics like secure boot, key management, and measured boot.
                         </p>
                         <p>
                             I love creating my own projects, and I have some of them on my Github. I also have some
